fix adding feature to settings list